--- a/.devcontainer/localFeatureA/devcontainer-feature.json
+++ b/.devcontainer/localFeatureA/devcontainer-feature.json
@@ -1,23 +1,19 @@
 {
     "name": "localFeatureA",
     "id": "localFeatureA",
-    "version": "0.0.1",
-    "description": "Installs software needed for short read mapping",
+    "version": "1.0.2",
+    "description": "A hello world feature",
     "options": {
-        "htslib": {
-            "type": "boolean",
-            "default": true,
-            "description": "Install HTSlib? default <true>"
-        },
-        "samtools": {
-            "type": "boolean",
-            "default": true,
-            "description": "Install Samtools? default <true>"
-        },
-        "bcftools": {
-            "type": "boolean",
-            "default": true,
-            "description": "Install BCFtools? default <true>"
+        "greeting": {
+            "type": "string",
+            "proposals": [
+                "hey",
+                "hello",
+                "hi",
+                "howdy"
+            ],
+            "default": "hey",
+            "description": "Select a pre-made greeting, or enter your own"
         }
     }
 }
